# grsim

./: .gitignore  Cargo.toml  README.md  setup.sh
.github/workflows/: rust.yml
data/: README.md
ltao/: Cargo.toml  setup.sh
ltao/scopes/: Cargo.toml
ltao/scopes/src/: main.rs
ltao/src/: agws.rs  agws_reconstructor.rs  lib.rs  main.rs
ltao/src/agws_reconstructor/: disjoined.rs  merged.rs
ltao/tests/dfs/: common.rs  main.rs
ltao/tests/oiwfs/: main.rs
ngao/: Cargo.toml  README.md  setup.sh
ngao-opm/: Cargo.toml  setup.sh  setup_client.sh  setup_server.sh
ngao-opm/data/: atmosphere.toml
ngao-opm/examples/: benchmark.rs
ngao-opm/scopes/: Cargo.toml
ngao-opm/scopes/src/: main.rs
ngao-opm/src/: hdfs.rs  lib.rs  main.rs  modal_to_zonal.rs
ngao/data/: README.md  atmosphere.toml
ngao/examples/calibrating/: calibrating.ipynb  main.rs
ngao/examples/closed-loop/: main.rs  processing.ipynb
ngao/examples/open-loop/: main.rs
ngao/examples/optical-gain/: main.rs
ngao/examples/processing/: main.rs  processing.ipynb
ngao/examples/toy/: main.rs
ngao/scopes/: Cargo.toml
ngao/scopes/src/: main.rs
ngao/src/: lib.rs  main.rs  main.rs.bkp  pyramid.rs
ngao/src/pyramid/: processing.rs
ngao/tests/: piston.rs
open-loop/: Cargo.toml  README.md
open-loop/data/: README.md  atmosphere.toml
open-loop/src/: main.rs
rle_acc/: Cargo.toml  assess_sssha_dt.asv  assess_sssha_dt.m  assess_sssha_dt_.mlx  processing.ipynb  setup.sh
rle_acc/data/: model_flowchart.html  modelflowchart-noM1C.html  modelflowchart-wiM1C.html
rle_acc/src/: main.rs
