[workspace]
members = ["open-loop", "ngao", "ngao-opm"]
resolver = "2"

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rconan/grsim"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
publish = false

[workspace.dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
gmt_dos-actors = "10.2"
gmt_dos-clients = "4.0"
interface = { version = "1.3", package = "gmt_dos-actors-clients_interface" }
gmt_dos-clients_io = "4.1"
gmt_dos-clients_arrow = "2.0"
gmt_dos-clients_crseo = "4.3"
gmt_dos-clients_scope = { version = "3.0", features = ["server"] }
gmt_dos-clients_scope-client = "0.2.1"
gmt_dos-clients_windloads = "2.2"
crseo = "0.9"
gmt-fem = "5.1.0"

#[profile.release]
#lto = "fat".
[patch.crates-io]
gmt_dos-clients_fem = { path = "/home/ubuntu/projects/dos-actors/clients/fem" }
gmt_dos-clients_mount = { path = "/home/ubuntu/projects/dos-actors/clients/mount" }
gmt_dos-clients_m1-ctrl = { path = "/home/ubuntu/projects/dos-actors/clients/m1-ctrl" }
gmt_dos-clients_m2-ctrl = { path = "/home/ubuntu/projects/dos-actors/clients/m2-ctrl" }
gmt_dos-clients_windloads = { path = "/home/ubuntu/projects/dos-actors/clients/windloads" }
gmt_dos-clients_servos = { path = "/home/ubuntu/projects/dos-actors/clients/servos" }
gmt_dos-clients_transceiver = { path = "/home/ubuntu/projects/dos-actors/clients/transceiver" }
gmt_dos-actors = { path = "/home/ubuntu/projects/dos-actors/actors" }
gmt_dos-actors_dsl = { path = "/home/ubuntu/projects/dos-actors/actors/dsl" }
gmt_dos-clients = { path = "/home/ubuntu/projects/dos-actors/clients/core" }
gmt_dos-clients_io = { path = "/home/ubuntu/projects/dos-actors/clients/io" }
gmt_dos-actors-clients_interface = { path = "/home/ubuntu/projects/dos-actors/interface" }
gmt-fem = { path = "/home/ubuntu/projects/dos-actors/clients/fem/model" }
