[workspace]
members = ["open-loop", "ngao", "ngao-opm", "ltao"]
resolver = "2"

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rconan/grsim"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
publish = false

[workspace.dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
gmt_dos-actors = "11.1.0"
gmt_dos-clients = "4.0"
interface = { version = "1.3.1", package = "gmt_dos-actors-clients_interface" }
gmt_dos-clients_io = "4.1"
gmt_dos-clients_arrow = "2.1.1"
gmt_dos-clients_crseo = "4.3"
gmt_dos-clients_scope = { version = "3.0", features = ["server"] }
gmt_dos-clients_scope-client = "0.2.1"
gmt_dos-clients_windloads = "2.0.3"
crseo = "1.0"
gmt-fem = "5.1.0"

#[profile.release]
#lto = "fat"

[patch.crates-io]
gmt_dos-actors = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/actors" }
gmt_dos-actors-clients_interface = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/interface" }
gmt_dos-clients = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/core" }
gmt_dos-clients_crseo = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/crseo" }
gmt_dos-clients_servos = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/servos" }
gmt_dos-clients_io = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/io" }
gmt_dos-clients_windloads = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/windloads" }
gmt_dos-clients_scope = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/scope" }
gmt_dos-clients_arrow = { path = "/home/ubuntu/data/home/ubuntu/projects/dos-actors/clients/arrow" }
crseo = { path = "/home/ubuntu/data/home/ubuntu/projects/crseo" }
