[workspace]
#members = ["open-loop", "ngao", "ngao-opm", "rle_acc"]
members = ["rle_acc"]
resolver = "2"

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rconan/grsim"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
publish = false

[workspace.dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
gmt_dos-actors = "11.1"
gmt_dos-clients = "4.4"
interface = { version = "1.3", package = "gmt_dos-actors-clients_interface" }
gmt_dos-clients_io = "4.2"
gmt_dos-clients_arrow = "2.1"
gmt_dos-clients_crseo = "4.3"
gmt_dos-clients_scope = { version = "3.1", features = ["server"] }
gmt_dos-clients_scope-client = "0.2.1"
gmt_dos-clients_windloads = "2.2"
crseo = "0.9"
gmt-fem = "5.1.0"

# DCMC DEBUG - LargeMass models
[patch.crates-io]
gmt_dos-actors = { path = "/Users/rromano/Workspace/dos-actors/actors" }
gmt_dos-clients = { path = "/Users/rromano/Workspace/dos-actors/clients/core" }
gmt_dos-actors-clients_interface = { path = "/Users/rromano/Workspace/dos-actors/interface" }
gmt_dos-clients_io = { path = "/Users/rromano/Workspace/dos-actors/clients/io" }
gmt_dos-clients_arrow = { path = "/Users/rromano/Workspace/dos-actors/clients/arrow" }
#gmt_dos-clients_windloads = { path = "/Users/rromano/Workspace/dos-actors/clients/windloads" }
gmt_dos-clients_fem = { path = "/Users/rromano/Workspace/dos-actors/clients/fem" }
gmt-fem = { path = "/Users/rromano/Workspace/dos-actors/clients/fem/model" }
gmt_dos-clients_m1-ctrl = { path = "/Users/rromano/Workspace/dos-actors/clients/m1-ctrl" }
gmt_dos-clients_mount = { path = "/Users/rromano/Workspace/dos-actors/clients/mount" }

#[profile.release]
#lto = "fat"
