[package]
name = "grsim_ltao"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true
default-run = "ltao"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["nalgebra"] }
interface = { workspace = true, features = ["filing"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_crseo = { workspace = true }
crseo.workspace = true
gmt_dos-clients_scope = { workspace = true, features = ["server", "compress"] }
skyangle = "0.2.2"
complot = "0.3.4"
serde-pickle = "1.1.1"
gmt_dos-clients_servos = "2.1.0"
gmt_dos-clients_windloads.workspace = true
faer = "0.19.3"
nanorand = "0.7.0"

[[bin]]
name = "ltao"
path = "src/main.rs"
