#workspace = { members = ["scopes"] }
[package]
name = "ngao-opm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crseo = { workspace = true, optional = true }
anyhow.workspace = true
complot = "0.3.4"
env_logger = "0.11.3"
fastrand = "2.0.1"
gmt-fem.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["nalgebra"] }
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_crseo = { workspace = true, features = [
    "faer",
], optional = true }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_scope = { workspace = true, features = ["server", "compress"] }
gmt_dos-clients_servos = "2.0.0"
gmt_dos-clients_windloads.workspace = true
interface.workspace = true
matio-rs = "1.3.1"
nalgebra = "0.32.4"
tokio.workspace = true
gmt_dos-clients_transceiver = { version = "2.0.0", features = ["insecure"] }

[features]
default = ["crseo", "gmt_dos-clients_crseo"]
# Set ASM command using a modal basis
modal_asm_cmd = []
windloads = []

[[bin]]
name = "ngao-opm"
path = "src/main.rs"
