[package]
name = "grsim_ngao"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true
default-run = "ngao"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
interface.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_crseo.workspace = true
gmt_dos-clients_scope.workspace = true
gmt_dos-clients_scope-client.workspace = true

[[bin]]
name = "ngao"
path = "src/main.rs"
