[package]
name = "rle_acc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
gmt-fem.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_io.workspace = true
#gmt_dos-clients_m1-ctrl = "4.1.0"
#gmt_dos-clients_mount = "4.0.0"
#gmt_dos-clients_fem = "4.3.4"
gmt_dos-clients_m1-ctrl = "4.1.1"
gmt_dos-clients_mount = "4.1.0"
gmt_dos-clients_fem = "4.4.0"
matio-rs = { version = "1.3.2", features = ["nalgebra"] }
nalgebra = "0.32.6"
tokio = { workspace = true, features = ["rt-multi-thread"] }
interface.workspace = true
skyangle = "0.2.2"

