[package]
name = "scopes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
gmt_dos-clients_io = "4.1.0"
gmt_dos-clients_scope-client = { version = "0.2.2" }
interface = "0.0.1"
tokio = "1.36.0"


[workspace]
